fix transactions, categories
