# controllers/categories.js
@@ -1,15 +1,21 @@
 const Categories = require('../repository/categories');
 const { HttpCode } = require('../helpers/constants');
 
+
 const getCategories = async (req, res) => {
-    const userId = req.user._id;
-    const data = await Categories.listCategories(userId, req.query);
+    const data = await Categories.listCategories();
+
+    const expenses = data.filter(({ isExpense }) => isExpense);
+    const incomes = data.filter(({ isExpense }) => !isExpense);
+
     res.json({
         status: 'Success',
         code: HttpCode.OK,
         message: 'Categories found',
-        data: [...data],
+        data: { expenses, incomes },
     });
 };
 
-module.exports = { getCategories };
+module.exports = {
+    getCategories,
+};
