# model/categories.js
@@ -1,15 +1,16 @@
-const { Schema, model } = require('mongoose');
+const { Schema, model, SchemaTypes } = require('mongoose');
 
 const categorySchema = new Schema(
     {
         name: { type: String },
         color: { type: String },
+        isExpense: { type: Boolean, default: true },
     },
     {
         versionKey: false,
         timestamps: true,
         toJSON: {
-            virtuals: false,
+            virtuals: true,
             transform: function (doc, ret) {
                 delete ret._id;
                 return ret;
