# model/transaction.js
@@ -3,14 +3,13 @@ const mongoosePaginate = require('mongoose-paginate-v2');
 
 const transactionSchema = new Schema(
     {
-        type: {
-            type: String,
-            enum: ["+", "-"],
-            require: true,
+        isExpense: {
+            type: Boolean,
+            default: true
         },
         date: {
-            type: String,
-            required: true,
+            type: Date,
+            
         },
         month: {
             type: Number,
@@ -21,11 +20,11 @@ const transactionSchema = new Schema(
         sum: {
             type: Number,
             required: true,
-            set: (data) => parseInt(data),
+            //set: (data) => parseInt(data),
         },
-        categoryId: {
-            type: String,
-            required: true,
+        category: {
+            type: SchemaTypes.ObjectId,
+            ref: 'category',
         },
         balance: {
             type: Number,
@@ -36,8 +35,7 @@ const transactionSchema = new Schema(
             default: '',
         },
         owner: {
-            type: Schema.Types.ObjectId,
-            //required: true,
+            type: SchemaTypes.ObjectId,
             ref: 'user',
         },
     },
@@ -56,6 +54,18 @@ const transactionSchema = new Schema(
         },
     },
 );
+
+transactionSchema.virtual('type').get(function () {
+    return this.isExpense ? '-' : '+';
+});
+
+transactionSchema.virtual('date_str').get(function () {
+    const dd = this.date.getDate();
+    const mm = this.date.getMonth() + 1;
+    const yyyy = this.date.getFullYear();
+
+    return `${dd}.${mm}.${yyyy}`;
+});
 
 transactionSchema.plugin(mongoosePaginate);
 
