# swagger.json
@@ -511,11 +511,12 @@
                             "schema": {
                                 "type": "object",
                                 "properties": {
-                                    "type": {
-                                        "type": "string"
+                                    "isExpense": {
+                                        "type": "boolean",
+                                        "default": true
                                     },
                                     "date": {
-                                        "type": "string",
+                                        "type": "Date",
                                         "example": "14.11.2021"
                                     },
                                     "sum": {
@@ -526,7 +527,7 @@
                                         "type": "string",
                                         "example": "comment"
                                     },
-                                    "categoryId": {
+                                    "category": {
                                         "type": "string",
                                         "example": "345e5677e78934c90f67"
                                     }
@@ -560,17 +561,16 @@
                                         "data": {
                                             "type": "object",
                                             "properties": {
-                                                "transType": {
-                                                    "type": "string",
-                                                    "description": "'spend' or 'income'",
-                                                    "example": "income"
+                                                "isExpense": {
+                                                    "type": "boolean",
+                                                    "example": true
                                                 },
                                                 "_id": {
                                                     "type": "string",
                                                     "example": "hg63576538hvhdjjb763875687"
                                                 },
                                                 "date": {
-                                                    "type": "string",
+                                                    "type": "Date",
                                                     "example": "14.11.2021"
                                                 },
                                                 "sum": {
@@ -585,7 +585,7 @@
                                                     "type": "Number",
                                                     "example": "5000"
                                                 },
-                                                "categoryId": {
+                                                "category": {
                                                     "type": "string",
                                                     "example": "hgh467676386gf3742363"
                                                 },
@@ -716,10 +716,9 @@
                                                         "items": {
                                                             "type": "object",
                                                             "properties": {
-                                                                "type": {
-                                                                    "type": "string",
-                                                                    "description": "'+' or '-'",
-                                                                    "example": "+"
+                                                                "isExpense": {
+                                                                    "type": "boolean",
+                                                                    "example": true
                                                                 },
                                                                 "_id": {
                                                                     "type": "string",
@@ -741,14 +740,14 @@
                                                                     "type": "Number",
                                                                     "example": "5000"
                                                                 },
-                                                                "categoryId": {
+                                                                "category": {
                                                                     "type": "string",
                                                                     "properties": {
                                                                         "_id": {
                                                                             "type": "string",
                                                                             "example": "hgh467676386gf3742363"
                                                                         },
-                                                                        "value": {
+                                                                        "name": {
                                                                             "type": "string",
                                                                             "example": "Еда"
                                                                         }
@@ -896,9 +895,7 @@
                                                             "type": "object",
                                                             "properties": {
                                                                 "type": {
-                                                                    "type": "string",
-                                                                    "description": "'+' or '-'",
-                                                                    "example": "+"
+                                                                    "isExpense": true
                                                                 },
                                                                 "_id": {
                                                                     "type": "string",
@@ -920,14 +917,14 @@
                                                                     "type": "Number",
                                                                     "example": "5000"
                                                                 },
-                                                                "categoryId": {
+                                                                "category": {
                                                                     "type": "string",
                                                                     "properties": {
                                                                         "_id": {
                                                                             "type": "string",
                                                                             "example": "hgh467676386gf3742363"
                                                                         },
-                                                                        "value": {
+                                                                        "name": {
                                                                             "type": "string",
                                                                             "example": "Еда"
                                                                         }
@@ -1079,9 +1076,8 @@
                                                             "type": "object",
                                                             "properties": {
                                                                 "type": {
-                                                                    "type": "string",
-                                                                    "description": "'spend' or 'income'",
-                                                                    "example": "income"
+                                                                    "isExpense": true
+                                                                
                                                                 },
                                                                 "_id": {
                                                                     "type": "string",
@@ -1103,14 +1099,14 @@
                                                                     "type": "Number",
                                                                     "example": "5000"
                                                                 },
-                                                                "categoryId": {
+                                                                "category": {
                                                                     "type": "string",
                                                                     "properties": {
                                                                         "_id": {
                                                                             "type": "string",
                                                                             "example": "hgh467676386gf3742363"
                                                                         },
-                                                                        "value": {
+                                                                        "name": {
                                                                             "type": "string",
                                                                             "example": "Еда"
                                                                         }
@@ -1347,7 +1343,7 @@
                                         "type": "string",
                                         "example": "comment"
                                     },
-                                    "categoryId": {
+                                    "category": {
                                         "type": "string",
                                         "example": "345e5677e78934c90f67"
                                     }
@@ -1382,9 +1378,8 @@
                                                             "type": "object",
                                                             "properties": {
                                                                 "type": {
-                                                                    "type": "string",
-                                                                    "description": "'spend' or 'income'",
-                                                                    "example": "income"
+                                                                    "isExpense": true
+                                                                    
                                                                 },
                                                                 "_id": {
                                                                     "type": "string",
@@ -1406,14 +1401,14 @@
                                                                     "type": "Number",
                                                                     "example": "5000"
                                                                 },
-                                                                "categoryId": {
+                                                                "category": {
                                                                     "type": "string",
                                                                     "properties": {
                                                                         "_id": {
                                                                             "type": "string",
                                                                             "example": "hgh467676386gf3742363"
                                                                         },
-                                                                        "value": {
+                                                                        "name": {
                                                                             "type": "string",
                                                                             "example": "Еда"
                                                                         }
@@ -1558,7 +1553,7 @@
                                                     "type": "integer",
                                                     "example": "1"
                                                 },
-                                                "value": {
+                                                "name": {
                                                     "type": "string",
                                                     "example": "Еда"
                                                 },
@@ -1675,10 +1670,9 @@
             "Transaction": {
                 "type": "object",
                 "properties": {
-                    "type": {
-                        "type": "string",
-                        "description": "'+' or '-'",
-                        "example": "+"
+                    "isExpense": {
+                        "type": "boolean",
+                        "example": true
                     },
                     "_id": {
                         "type": "string",
@@ -1700,7 +1694,7 @@
                         "type": "Number",
                         "example": "5000"
                     },
-                    "categoryId": {
+                    "category": {
                         "type": "string",
                         "example": "hgh467676386gf3742363"
                     },
